test/SemanticAnalysis/LifetimeMethods/InvalidReturnTypeAlignMask.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// CHECK: .loci:6:2: error: lifetime method '::TestClass::__alignmask' has incorrect return type
	static void __alignmask() noexcept { }
}

// CHECK: 1 error generated.
